[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entities/Hemwick/Dagger.png" type="Texture" id=1]
[ext_resource path="res://Misc/WeaponChangers/WeaponChangerDagger.gd" type="Script" id=2]
[ext_resource path="res://Shaders/dropshadow.gdshader" type="Shader" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.42944
height = 0.0

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/offset = Vector2( -3.421, 0.789 )
shader_param/modulate = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[sub_resource type="CircleShape2D" id=3]
radius = 4.16376

[node name="WeaponChanger_Dagger" type="StaticBody2D"]
collision_layer = 1024
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 3.11814, 21.9384 )
shape = SubResource( 1 )
disabled = true

[node name="Dagger" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( -0.352177, 27.5817 )
rotation = 3.60039
scale = Vector2( 0.18, 0.14 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PickUpArea" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
position = Vector2( 5.12267, 17.818 )
shape = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="PickUpArea" to="." method="_on_PickUpArea_area_entered"]
